--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,14 @@ h1 {
   bottom: 0px;
   left: 0px;
   width: 160px;
-  transform: translateX(-100%);
-  transition: transform 0.8s ease-out;
+  -webkit-transform: translateX(-100%);
+  -moz-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  -webkit-transition: transform 0.8s ease-out;
+  -moz-transition: transform 0.8s ease-out;
+  -o-transition: transform 0.8s ease-out;
+  -ms-transition: transform 0.8s ease-out;
   background: #757365;
   z-index: 1;
   text-align: center;
@@ -199,6 +205,8 @@ hr.style17:after {
   font-size: 18px;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
@@ -218,6 +226,8 @@ hr.style18:after {
   font-size: 18px;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
@@ -237,6 +247,8 @@ hr.style19:after {
   font-size: 18px;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
@@ -330,12 +342,19 @@ hr.style19:after {
           left: 0px;
           width: 100%;
           transform: translateY(-100%);
-          transition: transform 0.8s ease-out;
+          -webkit-transform: translateY(-100%);
+          -moz-transform: translateY(-100%);
+          -o-transform: translateY(-100%);
+          -ms-transform: translateY(-100%);
+          -webkit-transition: transform 0.8s ease-out;
+          -moz-transition: transform 0.8s ease-out;
+          -o-transition: transform 0.8s ease-out;
+          -ms-transition: transform 0.8s ease-out;
           background: #757365;
           z-index: 1;
           text-align: center;
           font-family: Garamond;
-          
+
         }
     }
 
@@ -366,8 +385,14 @@ hr.style19:after {
           bottom: 0px;
           left: 0px;
           width: 160px;
-          transform: translateX(-100%);
-          transition: transform 0.8s ease-out;
+          -webkit-transform: translateX(-100%);
+          -moz-transform: translateX(-100%);
+          -o-transform: translateX(-100%);
+          -ms-transform: translateX(-100%);
+          -webkit-transition: transform 0.8s ease-out;
+          -moz-transition: transform 0.8s ease-out;
+          -o-transition: transform 0.8s ease-out;
+          -ms-transition: transform 0.8s ease-out;
           background: #757365;
           z-index: 1;
           text-align: center;
@@ -392,8 +417,14 @@ hr.style19:after {
         bottom: 0px;
         left: 0px;
         width: 160px;
-        transform: translateX(-100%);
-        transition: transform 0.8s ease-out;
+        -webkit-transform: translateX(-100%);
+        -moz-transform: translateX(-100%);
+        -o-transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+        -webkit-transition: transform 0.8s ease-out;
+        -moz-transition: transform 0.8s ease-out;
+        -o-transition: transform 0.8s ease-out;
+        -ms-transition: transform 0.8s ease-out;
         background: #757365;
         z-index: 1;
         text-align: center;
@@ -417,8 +448,14 @@ hr.style19:after {
         bottom: 0px;
         left: 0px;
         width: 160px;
-        transform: translateX(-100%);
-        transition: transform 0.8s ease-out;
+        -webkit-transform: translateX(-100%);
+        -moz-transform: translateX(-100%);
+        -o-transform: translateX(-100%);
+        -ms-transform: translateX(-100%);
+        -webkit-transition: transform 0.8s ease-out;
+        -moz-transition: transform 0.8s ease-out;
+        -o-transition: transform 0.8s ease-out;
+        -ms-transition: transform 0.8s ease-out;
         background: #757365;
         z-index: 1;
         text-align: center;
