changes were made, stuff was fixed

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ h1 {
   color: #A4A290;
 }
 
+#success_message { 
+  display: none;
+}
+
 
 
 /*==================================================
